tests/src/test/resources/scala/tools/nsc/effects/purity/PuritySuite-files/localitiesPending.scala
import annotation.effects._

class C {
  def f1(a: Any): C @loc(a) = a match {
    case c: C => c
  }
}
